// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components | thypography should render the Text 1`] = `
.c0 {
  font-family: sans-serif;
  font-weight: 400;
}

.c1 {
  font-size: 16px;
}

<div>
  <p
    class="c0 c1"
  >
    Some text
  </p>
</div>
`;

exports[`components | thypography should render the TextDescription 1`] = `
.c0 {
  font-family: sans-serif;
  font-weight: 400;
}

.c1 {
  font-size: 16px;
}

<div>
  <p
    class="c0 c1"
  >
    Some text
  </p>
</div>
`;

exports[`components | thypography should render the TextLabel 1`] = `
.c0 {
  font-family: sans-serif;
  font-weight: 400;
}

.c1 {
  font-size: 14px;
}

<div>
  <p
    class="c0 c1"
  >
    Some text
  </p>
</div>
`;

exports[`components | thypography should render the Title 1`] = `
.c0 {
  font-family: sans-serif;
  font-weight: 600;
}

.c1 {
  font-size: 22px;
}

<div>
  <h1
    class="c0 c1"
  >
    Some text
  </h1>
</div>
`;
